nginx/nginx-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx-controller
  namespace: kube-system
  labels:
    k8s-app: nginx-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nginx-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
        name: nginx-ingress-lb
    spec:
      containers:
      - image: nginx
        name: nginx-ingress-lb
        ports:
        - name: http
          containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress-service
  namespace: prod
spec:
  selector:
    k8s-app: nginx-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
  type: LoadBalancer
