nginx/nginx-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-web-ui
  namespace: prod
spec:
  rules:
  - host: nginx.local.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-ingress-service
          servicePort: http
